@@ -285,6 +285,36 @@ sengr_at(s, x, y)
 }
 #endif /* ELBERETH */
 
+#ifdef ELBERETH_CONDUCT
+/* Return the number of distinct times Elbereth is engraved at
+ * the specified location. Case insensitive.  Counts an engraving
+ * as being present even if it's still being written: if you're
+ * killed while trying to write Elbereth, it still violates the
+ * conduct (mainly because it's easier to implement that way).
+ */
+unsigned nengr_at(s, x, y)
+	const char *s;
+	xchar x, y;
+{
+	register struct engr *ep = engr_at(x, y);
+	unsigned count = 0;
+	const char *p;
+	
+	if (!ep || HEADSTONE == ep->engr_type)
+		return 0;
+	
+	p = ep->engr_txt;	
+	while (strstri(p, s)) {
+		count++;
+		p += 8;
+	}
+
+	return count;
+}
+
+#endif /* ELBERETH_CONDUCT */
+
+
 #endif /* OVL0 */
 #ifdef OVL2
 
@@ -1198,7 +1228,17 @@ boolean fingers;
 
 	(void) strncat(buf, ebuf, (BUFSZ - (int)strlen(buf) - 1));
 
+#ifdef ELBERETH_CONDUCT
+	{
+		unsigned ecount1, ecount0 = nengr_at("Elbereth", u.ux, u.uy);
+		make_engr_at(u.ux, u.uy, buf, (moves - multi), type);
+		ecount1 = nengr_at("Elbereth", u.ux, u.uy);
+		if (ecount1 > ecount0)
+			u.uconduct.elbereths += (ecount1 - ecount0);
+	}
+#else
 	make_engr_at(u.ux, u.uy, buf, (moves - multi), type);
+#endif
 
 	if (post_engr_text[0]) pline(post_engr_text);
 
